--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>YouTube Comment Viewer</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
-    <link href="bootstrap-purged.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -42,6 +42,15 @@
   <body>
     <main class="container-xl">
       <h1><a href="" target="_self" class="noColor">YouTube Comment Viewer</a></h1>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="alert alert-secondary pl-3" role="alert">
+            Rest in peace, Technoblade 🐷
+          </div>
+        </div>
+      </div>
+
       <div class="row" id="intro">
         <div class="col-md-8 mb-3">
           <div class="card h-100">
