--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,6 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="YouTube Comment Viewer" />
     <meta name="twitter:description" content="Viewer for YouTube comments. Sort by oldest first, graph comment trends, and more." />
-    <meta name="twitter:creator" content="@Kite_Frozen" />
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82745335-2"></script>
     <script>
@@ -274,10 +273,7 @@
     <footer>
       <div class="container-xl">
         <span><a id="viewTerms" href="#">Terms of Service</a></span>
-        <span>|</span>
-        <span>Made by <a href="https://twitter.com/Kite_Frozen">FrozenKite</a></span>
-        <span class="float-right">v3.3.1 (<a href="https://github.com/FrozenKite/comment-viewer/blob/master/CHANGELOG.md"
-            target="_blank">View changelog</a>)</span>
+        <span class="float-right">v3.3.1</span>
       </div>
     </footer>
 
