Add changelog page with recent changes

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
   <body>
     <main class="container-xl">
-      <h1><a href="" target="_self" class="noColor">YouTube Comment Viewer</a></h1>
+      <h1><a href="" target="_top" class="noColor">YouTube Comment Viewer</a></h1>
       <div class="row" id="intro">
         <div class="col-md-8 mb-3">
           <div class="card h-100">
@@ -273,7 +273,7 @@
     <footer>
       <div class="container-xl">
         <span><a id="viewTerms" href="#">Terms of Service</a></span>
-        <span class="float-right">v3.3.1</span>
+        <span class="float-right">v3.3.1 (<a href="changelog">View changelog</a>)</span>
       </div>
     </footer>
 
