Use old changelog link, add "suggest a change"

--- a/public/index.html
+++ b/public/index.html
@@ -273,7 +273,10 @@
     <footer>
       <div class="container-xl">
         <span><a id="viewTerms" href="#">Terms of Service</a></span>
-        <span class="float-right">v3.3.1 (<a href="changelog">View changelog</a>)</span>
+        <span>|</span>
+        <span><a href="https://github.com/sameerdash2/comment-viewer/issues">Suggest a change</a></span>
+        <span class="float-right">v3.3.1 (<a href="https://github.com/sameerdash2/comment-viewer/blob/master/CHANGELOG.md"
+            target="_blank">View changelog</a>)</span>
       </div>
     </footer>
 
