Show count of indexed comments in load status

--- a/public/index.html
+++ b/public/index.html
@@ -196,10 +196,11 @@
             <div class="card-body p-3">
               <span id="loadPercentage" class="card-text">0.0%</span>
               <span id="loadEta" class="card-text"></span>
-              <div id="progress" class="progress pbar mt-2">
+              <div id="progress" class="progress pbar my-2">
                 <div id="progressGreen" class="progress-bar snap" role="progressbar" aria-label="Load status" aria-valuenow="0"
                   aria-valuemin="0" aria-valuemax="100"></div>
               </div>
+              <span id="loadCount" class="card-text gray">--</span>
             </div>
           </div>
         </div>
