switch to Google Analytics 4

--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,14 @@
     <meta name="twitter:title" content="YouTube Comment Viewer" />
     <meta name="twitter:description" content="Viewer for YouTube comments. Sort by oldest first, graph comment trends, and more." />
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82745335-2"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2EW2TYZ93"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      window.gtag = function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+      window.gtag = function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-      gtag("config", "UA-82745335-2");
+      gtag('config', 'G-R2EW2TYZ93');
     </script>
 
     <!-- Force parcel bundler to ignore socket script -->
