Support passing video ID as url parameter (#5)

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
   <body>
     <main class="container-xl">
-      <h1><a href="" target="_top" class="noColor">YouTube Comment Viewer</a></h1>
+      <h1><a href="/" target="_self" class="noColor">YouTube Comment Viewer</a></h1>
       <div class="row" id="intro">
         <div class="col-md-8 mb-3">
           <div class="card h-100">
