Implement OpenSearch (tab-to-search) Quickly open the site from address bar in Chrome/Edge/Firefox/Safari. https://developer.mozilla.org/en-US/docs/Web/OpenSearch This utilizes parcel-reporter-static-files-copy to serve favicon.ico without hashing its filename. * Apparently Chrome disabled this feature in the past couple years -- you need to turn on the search engines manually in settings, which (imo) defeats the purpose.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="bootstrap-purged.min.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="./favicon.ico" />
+    <link type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml" title="YouTube Comment Viewer">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base target="_blank" />
 
