acknowledge commentThreads API issue :(

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>YouTube Comment Viewer</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
-    <link href="bootstrap-purged.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="./favicon.ico" />
     <link type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml" title="YouTube Comment Viewer">
@@ -41,6 +41,14 @@
   <body>
     <main class="container-xl">
       <h1><a href="/" target="_self" class="noColor">YouTube Comment Viewer</a></h1>
+
+      <div class="alert alert-warning pl-3" role="alert">
+        <strong>Notice (29 Oct 2023)</strong>: The site may show more "quota exceeded" errors than usual.
+        This is due to a sudden change in the YouTube API, causing the daily quota to be exhausted 5 times as fast as it should.
+        Try again after midnight (Pacific time).
+        More info <a href="https://github.com/sameerdash2/comment-viewer/issues/10">here</a>.
+      </div>
+
       <div class="row" id="intro">
         <div class="col-md-8 mb-3">
           <div class="card h-100">
