they finally fixed commentThreads.list

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,7 @@
       <h1><a href="/" target="_self" class="noColor">YouTube Comment Viewer</a></h1>
 
       <div class="alert alert-warning pl-3" role="alert">
-        <strong>Notice (29 Oct 2023)</strong>: The site may show more "quota exceeded" errors than usual.
-        This is due to a sudden change in the YouTube API, causing the daily quota to be exhausted 5 times as fast as it should.
-        Try again after midnight (Pacific time).
-        More info <a href="https://github.com/sameerdash2/comment-viewer/issues/10">here</a>.
+        <p><strong>Update (14 Nov 2023)</strong>: API quota issues are now resolved. Happy viewing.</p>
       </div>
 
       <div class="row" id="intro">
