--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>YouTube Comment Viewer</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous">
+    <link href="bootstrap-purged.min.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="./favicon.ico" />
     <link type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml" title="YouTube Comment Viewer">
@@ -41,11 +41,6 @@
   <body>
     <main class="container-xl">
       <h1><a href="/" target="_self" class="noColor">YouTube Comment Viewer</a></h1>
-
-      <div class="alert alert-warning pl-3" role="alert">
-        <p><strong>Update (14 Nov 2023)</strong>: API quota issues are now resolved. Happy viewing.</p>
-      </div>
-
       <div class="row" id="intro">
         <div class="col-md-8 mb-3">
           <div class="card h-100">
@@ -294,7 +289,7 @@
       <div class="container-xl">
         <span><a id="viewTerms" href="#">Terms of Service</a></span>
         <span>|</span>
-        <span><a href="https://github.com/sameerdash2/comment-viewer/issues">Suggest a change</a></span>
+        <span><a href="https://github.com/sameerdash2/comment-viewer/issues">Report issues</a></span>
         <span class="float-right">v3.3.3 (<a href="https://github.com/sameerdash2/comment-viewer/blob/master/CHANGELOG.md"
             target="_blank">View changelog</a>)</span>
       </div>
