Support dark mode graph, add button in footer

--- a/public/index.html
+++ b/public/index.html
@@ -289,6 +289,8 @@
       <div class="container-xl">
         <span><a id="viewTerms" href="#">Terms of Service</a></span>
         <span>|</span>
+        <span><a id="toggleDark" href="#">Dark mode</a></span>
+        <span>|</span>
         <span><a href="https://github.com/sameerdash2/comment-viewer/issues">Report issues</a></span>
         <span class="float-right">v3.3.3 (<a href="https://github.com/sameerdash2/comment-viewer/blob/master/CHANGELOG.md"
             target="_blank">View changelog</a>)</span>
