Implement daily threshold for fetching comments

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>YouTube Comment Viewer</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
-    <link href="bootstrap-purged.min.css" rel="stylesheet" />
+    <link href="./bootstrap-purged.min.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="./favicon.ico" />
     <link type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml" title="YouTube Comment Viewer">
